Fix column 2 overflow in IE6, triggered when viewing a user account with many bots.
git-svn-id: http://svn.navi.cx/misc/trunk/cia@11152 9a66fdd2-3ab9-0310-9df6-91dd0304fdbc

--- a/media/css/account.css
+++ b/media/css/account.css
@@ -58,7 +58,6 @@ h1 {
   margin: 0;
   list-style-type: none;
   border-left: 1em solid #ccf;
-  overflow: hidden;
   white-space: nowrap;
 
   min-height:500px;
